--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+    <div class="bg-dark text-white p-2">
+        <span class="navbar-brand ml-2">
+            Sell Your Books!
+        </span>
+    </div>
+    <div class="row m-1 p-1">
+        <div id="test" class="col-1">
+             <h1>Books for sale</h1>
+        </div>
+    </div>
     <div>
         @RenderBody()
     </div>
