--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,12 +12,19 @@
 
 @foreach (var x in Model)
 {
-<div>
-    <h4>Title: @x.Title</h4>
-    <p>Author: @x.Author</p>
-    <p>Publisher: @x.Publisher</p>
-    <p>ISBN: @x.ISBN</p>
-    <p>Classification: @x.Classification</p>
-    <p>Price: @x.Price</p>
-</div>
+    <div class="card card-outline-primary m-1 p-1">
+        <div class="bg-faded p-1">
+            <h4>
+                Title: @x.Title
+                <span class="badge badge-pill badge-primary" style="float:right">
+                    Price: @x.Price
+                </span>
+            </h4>
+            <p>Author: @x.Author</p>
+            <p>Publisher: @x.Publisher</p>
+            <p>ISBN: @x.ISBN</p>
+            <p>Classification: @x.Classification</p>
+        </div>
+        
+    </div>
 }
