--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,12 +14,12 @@
         </span>
     </div>
     <div class="row m-1 p-1">
-        <div id="test" class="col-1">
+        <div id="test" class="col-2">
              <h1>Books for sale</h1>
         </div>
-    </div>
-    <div>
-        @RenderBody()
+        <div class="col-10">
+            @RenderBody()
+        </div>
     </div>
 </body>
 </html>
