--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
             <p>Publisher: @x.Publisher</p>
             <p>ISBN: @x.ISBN</p>
             <p>Classification: @x.Classification</p>
+            <p>Page Numbers: @x.PageNumbers</p>
         </div>
         
     </div>
