--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model IQueryable<Project>
+@model ProjectListViewModel
 
 <div class="text-center">
     <header>
@@ -10,7 +10,7 @@
     </header>
 </div>
 
-@foreach (var x in Model)
+@foreach (var x in Model.Projects)
 {
     <div class="card card-outline-primary m-1 p-1">
         <div class="bg-faded p-1">
@@ -29,3 +29,5 @@
         
     </div>
 }
+
+<div page-model="@Model.PageInfo" page-action="Index" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
