--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,22 +12,7 @@
 
 @foreach (var x in Model.Projects)
 {
-    <div class="card card-outline-primary m-1 p-1">
-        <div class="bg-faded p-1">
-            <h4>
-                Title: @x.Title
-                <span class="badge badge-pill badge-primary" style="float:right">
-                    Price: @x.Price
-                </span>
-            </h4>
-            <p>Author: @x.Author</p>
-            <p>Publisher: @x.Publisher</p>
-            <p>ISBN: @x.ISBN</p>
-            <p>Classification: @x.Classification</p>
-            <p>Page Numbers: @x.PageNumbers</p>
-        </div>
-        
-    </div>
+    <partial name="ProjectSummary" model="x"/>
 }
 
 <div page-model="@Model.PageInfo" page-action="Index" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
