--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <div class="row m-1 p-1">
         <div id="test" class="col-2">
             <h1>Books for sale</h1>
+            <vc:navigation-menu />
         </div>
         <!--Boostrap dropdown-->
         <div class="container">
