--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
     <partial name="ProjectSummary" model="x"/>
 }
 
+<!--This is the div that creates the page numbers-->
 <div page-model="@Model.PageInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
      page-class-normal="btn-outline-dark" page-class-selected="btn-primary"
      page-url-category="@Model.Type" class="btn-group pull-right m-1">
