--- a/Views/Shared/ProjectSummary.cshtml
+++ b/Views/Shared/ProjectSummary.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Project
  
+<!--This is where the information is created to be sent to the HTML-->
 <div class="card card-outline-primary m-1 p-1">
     <div class="bg-faded p-1">
         <h4>
