--- a/Views/Shared/ProjectSummary.cshtml
+++ b/Views/Shared/ProjectSummary.cshtml
@@ -13,7 +13,19 @@
         <p>Publisher: @Model.Publisher</p>
         <p>ISBN: @Model.ISBN</p>
         <p>Classification: @Model.Classification</p>
+    </div>
+    <div class="card-text p-1">
         <p>Page Numbers: @Model.PageNumbers</p>
     </div>
 
+    <form id="@Model.BookId" asp-page="/Cart" method="post">
+        <input type="hidden" asp-for="BookId"/>
+        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+        <span class="card-text p-1">
+            @Model.Title
+            <button type="submit" class="btn-success btn-sm pull-right" style="float:right">
+                Buy
+            </button>
+        </span>
+    </form>
 </div>
