--- a/Pages/Buy.cshtml
+++ b/Pages/Buy.cshtml
@@ -3,4 +3,20 @@
 @{
 }
 
-<p></p>
+<h2>Your Cart</h2>
+
+<table class="table table-bordered table-striped"></table>
+
+    <thead>
+        <tr>
+            <th>Book</th><th>Quantity</th><th>Price</th><th>Subtotal</th>
+        </tr>
+        <tbody>
+            @foreach(var line in Model.Cart.Lines)
+            {
+                <tr>
+                    <td>@line.Project.Title</td><td>@line.Quantity</td><td>@line.Project.Price</td><td>@(line.Quantity * line.Project.Price).ToString</td>
+                </tr>
+            }
+        </tbody>
+    </thead>
